--- a/admin/group-menber.html
+++ b/admin/group-menber.html
@@ -95,7 +95,7 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-lg-8">
-                                <h4 class="panel-title menber-class">成员</h4>
+                                <h4 class="panel-title menber-class">成员(共<a class="member-num" href="javascript:void(0)">8</a>个)</h4>
                             </div>
                             <div class="col-lg-4">
                                 <div class="input-group input-group-sm">
@@ -109,6 +109,50 @@
                     <div class="panel-body">
                         <div class="row marbottom15">
                             <!-------------------------------------群组成员列表--------------------------------------->
+                            <div class="pull-left marleft27 martop10">
+                                <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
+                                    <div class="text-overflow">sunshine</div>
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a class="add-firends" href="javascript:void(0)" data-toggle="modal" data-target=".add-firend-modal">加好友</a></h5>
+                                    <h5 class="media-heading"><a class="send-msgs" href="javascript:void(0)" data-toggle="modal" data-target=".send-msgs-modal">发消息</a></h5>
+                                </div>
+                            </div>
+
+                            <div class="pull-left marleft27 martop10">
+                                <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
+                                    <div class="text-overflow">sunshine</div>
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a class="add-firends" href="javascript:void(0)" data-toggle="modal" data-target=".add-firend-modal">加好友</a></h5>
+                                    <h5 class="media-heading"><a class="send-msgs" href="javascript:void(0)" data-toggle="modal" data-target=".send-msgs-modal">发消息</a></h5>
+                                </div>
+                            </div>
+
+                            <div class="pull-left marleft27 martop10">
+                                <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
+                                    <div class="text-overflow">sunshine</div>
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a class="add-firends" href="javascript:void(0)" data-toggle="modal" data-target=".add-firend-modal">加好友</a></h5>
+                                    <h5 class="media-heading"><a class="send-msgs" href="javascript:void(0)" data-toggle="modal" data-target=".send-msgs-modal">发消息</a></h5>
+                                </div>
+                            </div>
+
+                            <div class="pull-left marleft27 martop10">
+                                <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
+                                    <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
+                                    <div class="text-overflow">sunshine</div>
+                                </a>
+                                <div class="media-body">
+                                    <h5 class="media-heading"><a class="add-firends" href="javascript:void(0)" data-toggle="modal" data-target=".add-firend-modal">加好友</a></h5>
+                                    <h5 class="media-heading"><a class="send-msgs" href="javascript:void(0)" data-toggle="modal" data-target=".send-msgs-modal">发消息</a></h5>
+                                </div>
+                            </div>
+
                             <div class="pull-left marleft27 martop10">
                                 <a class="pull-left text-center" href="#" title="sunshine" style="margin-right:5px;">
                                     <img class="media-object" width="48" height="48" style="width:48px;height:48px;" src="../img/login/user_normal.jpg" alt="...">
