--- a/admin/home.html
+++ b/admin/home.html
@@ -111,7 +111,7 @@
                         </div>
                     </a>
 
-                    <a href="#" class="list-group-item">
+                    <a href="school-list.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">显示全部</div>
                             <div class="col-sm-4 col-lg-4 text-right">
