--- a/admin/school-list.html
+++ b/admin/school-list.html
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-lg-2 text-left paddleft0">
                                 <!-- Small button group -->
-                                <button class="btn btn-default btn-sm dropdown-toggle" type="button">创建群组</button>
+                                <button class="btn btn-default btn-sm dropdown-toggle" type="button" onclick="window.location.href='group-create.html'">创建群组</button>
                             </div>
                         </div>
                     </div>
