--- a/admin/home.html
+++ b/admin/home.html
@@ -100,16 +100,9 @@
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
                         学校<span class="sr-only">此列表为学校群组推荐</span>
                     </a>
-                    <a href="#" class="list-group-item">Web设计小组</a>
-                    <a href="#" class="list-group-item">电影赏析小组</a>
-                    <a href="#" class="list-group-item">
-                        <div class="row">
-                            <div class="col-sm-8 col-lg-8">APP开发</div>
-                            <div class="col-sm-4 col-lg-4 text-right">
-                                <i class="glyphicon glyphicon-bullhorn"></i><span class="sr-only">推荐</span>
-                            </div>
-                        </div>
-                    </a>
+                    <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> Web设计小组</a>
+                    <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> 电影赏析小组</a>
+                    
 
                     <a href="school-list.html" class="list-group-item">
                         <div class="row">
