--- a/admin/group-create-ok.html
+++ b/admin/group-create-ok.html
@@ -80,7 +80,7 @@
                         <div class="pt10">
 
                             <fieldset>
-                                <legend><h5>发送小组链接</h5> </legend>
+                                <legend><h5>发送群组链接</h5> </legend>
                                 <input type="text" class="form-control input-sm" disabled value="https://qiyidea.cn/j/aws82k" />
                                 <div class="ptb5">
                                     <a class="btn btn-primary btn-sm" href="#">复制邀请链接</a>
@@ -123,12 +123,12 @@
 
                             <div class="clearfix mtmb15"></div>
                             <fieldset>
-                                <legend><h5>小组密码</h5> </legend>
-                                 系统自动生成小组密码
+                                <legend><h5>群组密码</h5> </legend>
+                                 系统自动生成群组密码
                                 <div>
                                     <input type="text" class="form-control input-sm" disabled value="14aws82k" />
                                     <div class="ptb5">
-                                        <a class="btn btn-primary btn-sm" href="#" >复制小组密码</a>
+                                        <a class="btn btn-primary btn-sm" href="#" >复制群组密码</a>
                                     </div>
                                 </div>
 
