--- a/admin/home.html
+++ b/admin/home.html
@@ -85,7 +85,7 @@
                         <a href="group-post.html" class="list-group-item">Web设计</a>
                         <a href="group-post.html" class="list-group-item">Morbi leo risus</a>
                         <a href="group-post.html" class="list-group-item">APP开发</a>
-                        <a href="group-list.html" class="list-group-item">
+                        <a href="group-list.html" class="list-group-item list-group-item-info">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-6">显示全部</div>
                                 <div class="col-sm-6 col-lg-6 text-right">
@@ -96,12 +96,32 @@
                     </div>
                 </div>
 
-                <div class="list-group ">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-lg-12"> 成都七中嘉祥外国语学校</div>
+                        </div>
+                    </div>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> Web设计群组</a>
+                        <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> 电影赏析群组</a>
+                        <a href="school-list.html" class="list-group-item list-group-item-info">
+                            <div class="row">
+                                <div class="col-sm-6 col-lg-6">显示全部</div>
+                                <div class="col-sm-6 col-lg-6 text-right">
+                                    <i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">更多</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <!--<div class="list-group ">
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
-                        学校<span class="sr-only">此列表为学校群组推荐</span>
+                        成都七中嘉祥外国语学校
                     </a>
-                    <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> Web设计小组</a>
-                    <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> 电影赏析小组</a>
+                    <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> Web设计群组</a>
+                    <a href="#" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> 电影赏析群组</a>
                     
 
                     <a href="school-list.html" class="list-group-item">
@@ -112,7 +132,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div>-->
 
 
             </div>
@@ -394,7 +414,7 @@
                     加入群组
                 </div>
                 <div class="modal-body">
-                    <input type='password' class="form-control btn-sm" id="ren-input-group-pwd" placeholder="小组密码" />
+                    <input type='password' class="form-control btn-sm" id="ren-input-group-pwd" placeholder="群组密码" />
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-link btn-sm" data-dismiss="modal">取 消</button> 或 &nbsp;
