--- a/admin/group-menber.html
+++ b/admin/group-menber.html
@@ -52,7 +52,7 @@
                                 </a>
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
-                                    小组
+                                    群组
                                     <div class="btn-group pull-right paddright13">
                                         <a href="../admin/group-admin-manege.html" class="glyphicon glyphicon-cog cursor" title="群组管理">
                                         </a>
@@ -73,7 +73,7 @@
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
                         其他组<span class="sr-only">此列表为学校群组推荐</span>
                     </a>
-                    <a href="#" class="list-group-item">Web设计小组</a>
+                    <a href="#" class="list-group-item">Web设计群组</a>
 
 
                     <a href="#" class="list-group-item">
