--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -52,7 +52,7 @@
                                 </a>
                                 <div class="media-body">
                                     <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
-                                    小组
+                                    
                                     <div class="btn-group pull-right paddright13">
                                         <a href="../admin/group-admin-manege.html" class="glyphicon glyphicon-cog cursor" title="群组管理">
                                         </a>
@@ -71,9 +71,9 @@
 
                 <div class="list-group ">
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
-                        其他组<span class="sr-only">此列表为学校群组推荐</span>
+                        群组
                     </a>
-                    <a href="#" class="list-group-item">Web设计小组</a>
+                    <a href="#" class="list-group-item">Web设计群组</a>
 
 
                     <a href="#" class="list-group-item">
@@ -90,7 +90,7 @@
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
                         热门帖子<span class="sr-only">此列表为学校群组推荐</span>
                     </a>
-                    <a href="group-post-details .html" class="list-group-item">Web设计小组</a>
+                    <a href="group-post-details .html" class="list-group-item">Web设计群组</a>
 
 
                     <a href="#" class="list-group-item">
@@ -122,13 +122,13 @@
                                                 Mr. 张's 高等教育 group
                                             </div>
                                             <div class="pull-left already-add-group fz12 ">
-                                                我是这个小组的成员 >
-                                                <a href="javascript:void(0)" class="drop-out-group" data-toggle="modal" data-target=".drop-out-group-modal">退出小组</a>
+                                                我是这个群组的成员 >
+                                                <a href="javascript:void(0)" class="drop-out-group" data-toggle="modal" data-target=".drop-out-group-modal">退出群组</a>
                                             </div>
                                         </div>
                                         <div class="pull-left no-add-group" style="display:none;">
                                             <div class="btn-group">
-                                                <button type="button" class="btn btn-sm btn-success add-group">加入小组</button>
+                                                <button type="button" class="btn btn-sm btn-success add-group">加入群组</button>
                                             </div>
                                         </div>
                                         <div class="clearfix"></div>
@@ -382,7 +382,7 @@
     <div id="footer"></div>
 
     <!--dialog modal-->
-    <!------------------------------------------------------退出小组------------------------------------------------------------------>
+    <!------------------------------------------------------退出群组------------------------------------------------------------------>
     <div class="modal fade drop-out-group-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -391,7 +391,7 @@
                     <h4 class="modal-title" id="myModalLabel">系统消息 </h4>
                 </div>
                 <div class="modal-body">
-                    确定退出小组吗?
+                    确定退出群组吗?
                 </div>
                 <div class="modal-footer">
                     <a href="javascript:void(0)" class="" data-dismiss="modal">取消</a>
