--- a/admin/school-list.html
+++ b/admin/school-list.html
@@ -61,12 +61,32 @@
                 </div>
 
 
-                <div class="list-group ">
+
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-lg-12"> 热门群组</div>
+                        </div>
+                    </div>
+                    <div class="list-group">
+                        <a href="group-post.html" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> Web设计群组</a>
+                        <a href="group-post.html" class=" list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> 电影赏析群组</a>
+                        <a href="school-list.html" class="list-group-item list-group-item-info">
+                            <div class="row">
+                                <div class="col-sm-6 col-lg-6">显示全部</div>
+                                <div class="col-sm-6 col-lg-6 text-right">
+                                    <i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">更多</span>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <!--<div class="list-group ">
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
                         热门群组<span class="sr-only">此列表为学校群组推荐</span>
                     </a>
-                    <a href="group-post.html" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> Web设计小组</a>
-                    <a href="group-post.html" class=" list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> 电影赏析小组</a>
+                    <a href="group-post.html" class="list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> Web设计群组</a>
+                    <a href="group-post.html" class=" list-group-item"><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span> 电影赏析群组</a>
                     
 
                     <a href="#" class="list-group-item">
@@ -77,7 +97,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div>-->
 
 
             </div>
@@ -108,7 +128,7 @@
                                 <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
                             </a>
                             <div class="media-body pl15">
-                                <!--<h5 class="media-heading"><a href="#" class="nulinkunderline">学生创意发展中心小组</a></h5>
+                                <!--<h5 class="media-heading"><a href="#" class="nulinkunderline">学生创意发展中心群组</a></h5>
                                 <p class="small">
                                     45 个成员 在此聚集
                                     <br />
@@ -119,7 +139,7 @@
                                 <div class="row">
                                     <div class="col-lg-11">
                                         <dl>
-                                            <dt><a href="group-post.html" class="nulinkunderline">学生创意发展中心小组</a><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span></dt>
+                                            <dt><a href="group-post.html" class="nulinkunderline">学生创意发展中心群组</a><span class="glyphicon glyphicon-tree-conifer marleft10 bg-color-v cursor" title="已认证"></span></dt>
                                             <dd class="small ptb5">45 个成员 在此聚集</dd>
                                             <dd class="small">Bootstrap是Twitter推出的一个开源的用于前端开发的工具包。它由Twitter的设计师Mark Otto和Jacob Thornton合作开发，是一个CSS/HTML框架。Bootstrap提供了优雅的HTML和CSS规范，它即是由动态CSS语言Less写成。Bootstrap一经推出后颇受欢迎，一直是GitHub上的热门开源项目，包括NASA的MSNBC（微软全国广播公司）的Breaking News都使用了该项目。</dd>
                                         </dl>
