--- a/admin/head.html
+++ b/admin/head.html
@@ -41,7 +41,7 @@
                     <ul class="dropdown-menu ren-dropdown-menu" role="menu" aria-labelledby="drop3">
                         <li><a href="user-index.html"><i class="glyphicon glyphicon-dashboard"></i> &nbsp; 个人主页</a> </li>
                         <li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> &nbsp; 我的项目<span class="badge">4</span></a> </li>
-                        <li><a href="doc.html"><i class="glyphicon glyphicon-book"></i> &nbsp;&nbsp;我的校园</a></li>
+                        <li><a href="school-list.html"><i class="glyphicon glyphicon-book"></i> &nbsp;&nbsp;我的校园</a></li>
                         <li><a href="user-page.html"><i class="glyphicon glyphicon-user"></i> &nbsp;&nbsp;个人中心</a></li>
                         <li><a href="settings.html"><i class="glyphicon glyphicon-cog"></i> &nbsp;&nbsp;系统设置</a></li>
                         <li class="divider"></li>
