--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -177,11 +177,15 @@
                         <div class="tab-pane active" id="panel-1">
                             <form role="form">
                                 <div class="form-group">
+                                    <label for="" class="sr-only">标题</label>
+                                    <input type="text" placeholder="标题" class="form-control  input-sm post-title">
+                                </div>
+                                <div class="form-group">
                                     <label for="exampleInputEmail1" class="sr-only">内容</label>
                                     <textarea class="form-control ren-textarea" placeholder="说点什么吧…" rows="1"></textarea>
                                 </div>
                                 <div class="ren-more-input-box">
-                                    <div class="form-group">
+                                    <!--<div class="form-group">
                                         <select data-placeholder="输入联系人或群组的名字…" class="chosen-select ren-info-note-chosen" style="width:100%;" multiple tabindex="6">
                                             <option value=""></option>
                                             <optgroup label="联系人">
@@ -210,7 +214,7 @@
                                             </optgroup>
 
                                         </select>
-                                    </div>
+                                    </div>-->
                                     <div class="clearfix mt5mb15"></div>
                                     <div class="row">
                                         <div class="col-lg-8">
@@ -238,51 +242,7 @@
                         </div>
                         <div class="tab-pane" id="panel-2">
 
-                            <form role="form">
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1" class="sr-only">内容</label>
-                                    <textarea class="form-control ren-textarea" placeholder="输入提醒信息…" rows="1"></textarea>
-                                </div>
-                                <div class="ren-more-input-box">
-                                    <div class="form-group">
-                                        <select data-placeholder="发送给" class="chosen-select ren-info-send-chosen" style="width:100%;" multiple tabindex="6">
-                                            <option value=""></option>
-                                            <optgroup label="联系人">
-                                                <option>Dallas Cowboys</option>
-                                                <option>New York Giants</option>
-                                                <option>Philadelphia Eagles</option>
-                                                <option>Washington Redskins</option>
-                                                <option>Chicago Bears</option>
-                                                <option>Detroit Lions</option>
-                                                <option>Green Bay Packers</option>
-                                                <option>Minnesota Vikings</option>
-                                                <option>Atlanta Falcons</option>
-                                                <option>Carolina Panthers</option>
-                                                <option>New Orleans Saints</option>
-                                                <option>Tampa Bay Buccaneers</option>
-                                            </optgroup>
-
-
-                                        </select>
-                                    </div>
-                                    <div class="clearfix mt5mb15"></div>
-                                    <div class="row">
-                                        <div class="col-lg-6">
-                                            <div class="btn-toolbar" role="toolbar">
-
-                                                <div class="btn-group btn-group-sm">
-                                                    <button type="button" class="btn btn-default ren-btn-tooltip" data-placement="bottom" title="定时" data-toggle="modal" data-target=".bs-datetimepicker-modal"><span class="glyphicon glyphicon-time"></span> <span class="sr-only">定时信息</span></button>
-                                                </div>
-                                                <h5>h5. Bootstrap heading</h5>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6 text-right">
-                                            <button type="button" class="btn-link">取 消</button>  或 &nbsp;&nbsp; <button type="submit" class="btn btn-primary btn-sm">发 送</button>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </form>
+                            <p>第2部分内容.</p>
 
                         </div>
                         <div class="tab-pane" id="panel-3" contenteditable="true">
