--- a/admin/group-menber.html
+++ b/admin/group-menber.html
@@ -51,8 +51,7 @@
                                     <img class="media-object" width="51" height="51" style="width:51px;height:51px;" src="../img/login/group-img.png" alt="...">
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="group-title media-heading">Mr. 张's 高等教育 group</h4>
-                                    群组
+                                    <h4 class="group-title media-heading">Web设计</h4>
                                     <div class="btn-group pull-right paddright13">
                                         <a href="../admin/group-admin-manege.html" class="glyphicon glyphicon-cog cursor" title="群组管理">
                                         </a>
@@ -95,7 +94,7 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-lg-8">
-                                <h4 class="panel-title menber-class">成员(共<a class="member-num" href="javascript:void(0)">8</a>个)</h4>
+                                <h5 class="panel-title menber-class">成员(共<a class="member-num" href="javascript:void(0)"><span class="badge">42</span></a>个)</h5>
                             </div>
                             <div class="col-lg-4">
                                 <div class="input-group input-group-sm">
