--- a/admin/user-index.html
+++ b/admin/user-index.html
@@ -45,7 +45,7 @@
             <div class="panel-body panel-default">
                 <div class="media">
                     <div class="pull-left">
-                        <a href="../admin/user-index-info.html#">
+                        <a href="../admin/user-index-info.html" target="_blank">
                             <img class="media-object img-rounded" src="../img/default_avatar.gif" alt="..." style="width:130px; height:130px;">
                         </a>
                         <div class="ptb5">
@@ -59,7 +59,7 @@
 
                         <dl>
                             <dt>
-                                <a href="../admin/user-index-info.html" class="fz16">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
+                                <a href="../admin/user-index-info.html" target="_blank" class="fz16">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
 
                             </dt>
                             <dd class=""><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校</dd>
