--- a/admin/settings-contacts.html
+++ b/admin/settings-contacts.html
@@ -123,7 +123,7 @@
                                     <div class="col-lg-10 small">
                                         <dl>
                                             <dt>
-                                                <a href="/admin/user-index.html">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
+                                                <a href="../admin/user-index.html">死不靠谱夫斯基</a> &nbsp;<span class="fz10 color-grey">89人关注</span>
                                             </dt>
                                             <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校  &nbsp; 初二一班 </dd>
                                             <dd>
@@ -158,7 +158,7 @@
                                     <div class="col-lg-10 col-sm-12 small">
                                         <dl>
                                             <dt>
-                                                <a href="/admin/user-index.html">炝炒空心菜</a> &nbsp;<span class="fz10 color-grey">89人关注</span> 
+                                                <a href="../admin/user-index.html">炝炒空心菜</a> &nbsp;<span class="fz10 color-grey">89人关注</span> 
                                             </dt>
                                             <dd><span class="glyphicon glyphicon-map-marker"></span>  四川 成都 锦江区 成都七中嘉祥外国语学校  &nbsp; 初二一班 </dd>
                                             <dd> 
