--- a/admin/group-create.html
+++ b/admin/group-create.html
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     </a>
-                     
+
 
 
 
@@ -72,7 +72,7 @@
                 <!--为post 消息列表-->
                 <div class="panel panel-default">
                     <div class="panel-heading panel-danger">
-                       <h4>创建群组</h4> 
+                        <h4>创建群组</h4>
                     </div>
                     <div class="panel-body">
                         <div class="pt10">
@@ -93,9 +93,17 @@
                             <form class="form-horizontal" role="form">
                                 <div class="col-sm-8 col-lg-8">
                                     <div class="form-group">
-                                        <label class="control-label sr-only" for="groupname">添加标签</label>
+                                        <label class="control-label sr-only" for="groupname">输入要创建的群组名称</label>
                                         <div class="col-lg-11">
                                             <input type="text" class="form-control" name="groupname" id="groupname" placeholder="输入要创建的群组名称" maxlength="200" required>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-lg-11">
+                                            <div class="btn-group btn-group-sm">
+                                                <button type="button" class="btn btn-default active">私密</button>
+                                                <button type="button" class="btn btn-default">公开</button>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
