--- a/admin/group-admin-manege.html
+++ b/admin/group-admin-manege.html
@@ -228,10 +228,19 @@
                         <div class="panel panel-primary">
                             <div class="panel-heading">
                                 <div class="row">
-                                    <div class="col-lg-12">
+                                    <div class="col-lg-8">
                                         <h4 class="panel-title">群组成员</h4>
                                     </div>
-
+                                    <div class="col-lg-4">
+                                        <form class="navbar-left" role="form" action="index.html">
+                                            <div class="input-group">
+                                                <input type="text" placeholder="姓名..." class="form-control  input-sm">
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-default btn-sm" type="button">搜 索</button>
+                                                </span>
+                                            </div>
+                                        </form>
+                                    </div>
 
                                 </div>
                             </div>
@@ -300,6 +309,19 @@
                                     <!-------------------------------------群组成员列表--------------------------------------->
                                 </div>
 
+                            </div>
+                            <div class="panel-footer mp0">
+                                <div class="row small">
+                                    <ul class="pagination" style="margin:10px 10px 5px 25px; ">
+                                        <li><a href="#">&laquo;</a></li>
+                                        <li><a href="#">1</a></li>
+                                        <li><a href="#">2</a></li>
+                                        <li><a href="#">3</a></li>
+                                        <li><a href="#">4</a></li>
+                                        <li><a href="#">5</a></li>
+                                        <li><a href="#">&raquo;</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
 
