--- a/head.html
+++ b/head.html
@@ -1,43 +1,45 @@
 ﻿  <!-- Static  navbar -->
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="border-bottom-color: #D9D9DE;">
-    <div class="container">
-        <div class="navbar-header">
+<nav class="navbar navbar-default navbar-static-top" role="navigation" style="border-bottom-color: #bfbfbf;box-shadow: rgb(190, 190, 190) 0px 0px 3px 0px;  background-color:#fff;">
 
-            <a class="navbar-brand navbar-brand-logo" href="#">
-                <img alt="奇异点・qiyidea.com" src="img/qiyidea_logo.png">
-            </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html">首页</a></li>
-                <li class="active"><a href="list.html">浏览项目</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">筹资金</a></li>
-                        <li><a href="#">筹实物</a></li>
-                        <li><a href="#">发现小伙伴</a></li>
+    <!--<nav class="navbar navbar-default navbar-static-top" role="navigation" style="border-bottom-color: #D9D9DE;">-->
+        <div class="container">
+            <div class="navbar-header">
 
-                    </ul>
-                </li>
-                <li><a href="#contact">帮助中心</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="admin/user_signin.html">注册</a></li>
-                <li><a href="admin/home.html">登录</a></li>
-                <li><a href="#">第三方登录</a></li>
-            </ul>
-            <div class="navbar-form navbar-right navbar-form-input">
-                <form class="navbar-left" role="form" action="index.html">
-                    <div class="input-group">
-                        <input type="text" placeholder="发现更多金点子" class="form-control  input-sm">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success btn-sm" type="button">搜 索</button>
-                        </span>
-                    </div>
-                </form>
-
+                <a class="navbar-brand navbar-brand-logo" href="#">
+                    <img alt="奇异点・qiyidea.com" src="img/qiyidea_logo.png">
+                </a>
             </div>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">首页</a></li>
+                    <li class="active"><a href="list.html">浏览项目</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">发起项目 <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">筹资金</a></li>
+                            <li><a href="#">筹实物</a></li>
+                            <li><a href="#">发现小伙伴</a></li>
+
+                        </ul>
+                    </li>
+                    <li><a href="#contact">帮助中心</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="admin/user_signin.html">注册</a></li>
+                    <li><a href="admin/home.html">登录</a></li>
+                    <li><a href="#">第三方登录</a></li>
+                </ul>
+                <div class="navbar-form navbar-right navbar-form-input">
+                    <form class="navbar-left" role="form" action="index.html">
+                        <div class="input-group">
+                            <input type="text" placeholder="发现更多金点子" class="form-control  input-sm">
+                            <span class="input-group-btn">
+                                <button class="btn btn-success btn-sm" type="button">搜 索</button>
+                            </span>
+                        </div>
+                    </form>
+
+                </div>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
